<resources>
    <string name="app_name">AlloMairie</string>

    <string name="nav_header_title">Nicos Aliagas</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="button_random_text">Random</string>
    <string name="count_button_text">Count</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="toast_button_text">Toast</string>
    <string name="random_heading">Here is a random number between 0 and %d.</string>
    <string name="content_description_end_icon_firstname">Description a compléter</string>
    <string name="validate_button_text">Valider</string>
    <string name="cancel_button_text">Annuler</string>
    <!-- Validators -->
    <string name="validator_field_required">Le champ %s est requis</string>
    <string name="validator_field_no_valid">Le champ %s n\'est pas valide</string>
    <string name="user_connected_preference_key">USER_CONNECTED</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Créer un compte</string>

    <!-- Sync Preferences -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="welcome_login">Bienvenue</string>
    <string name="action_logout">Se déconnecter</string>
    <string name="register_title">Nouveau compte</string>
    <string name="edit_profile_title">Mon profil</string>
</resources>