<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="fr.nicos.allomairieapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_fragment_second"
            app:destination="@id/nav_fragment_second" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="fr.nicos.allomairieapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="fr.nicos.allomairieapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_fragment_second"
        android:name="fr.nicos.allomairieapp.ui.second.FragmentSecond"
        android:label="FragmentSecond"
        tools:layout="@layout/fragment_second" >
        <action
            android:id="@+id/action_nav_fragment_second_to_nav_home"
            app:destination="@id/nav_home" />
        <argument
            android:name="myArg"
            app:argType="integer" />
    </fragment>
</navigation>