<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="userViewModel"
            type="fr.nicos.allomairieapp.ui.incident.formIncident.viewModels.UserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/formIncidentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.incident.formIncident.FormIncidentFragment"
        android:layoutDirection="ltr">

        <TableLayout
            android:id="@+id/userTableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:stretchColumns="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_person_icon" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:hint="Prénom"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:startIconContentDescription="@string/content_description_end_icon_firstname">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstNameText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={userViewModel.userFirstName}"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Space
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="10dp" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:hint="Nom"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:startIconContentDescription="@string/content_description_end_icon_firstname">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/lastNameText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={userViewModel.userLastName}"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_phone_icon" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:hint="Téléphone"
                    android:inputType="phone"
                    android:ems="10"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:startIconContentDescription="@string/content_description_end_icon_firstname">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phoneText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={userViewModel.userPhone}"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/ic_email_icon" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailTextLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:startIconContentDescription="@string/content_description_end_icon_firstname">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emailText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={userViewModel.userEmail}"
                        android:singleLine="true" />
                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:gravity="end"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/userTableLayout">

            <Button
                android:id="@+id/cancelButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/cancel_button_text"
                android:textColor="@color/md_theme_light_primary" />

            <Button
                android:id="@+id/validateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/md_theme_light_primary"
                android:text="@string/validate_button_text"
                android:textColor="@android:color/white"
                tools:ignore="ButtonStyle"
                tools:toastMessage="@{userViewModel.toastMessage}"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
